Forum Browser Changelog

Special thanks to John Hanselman for all his testing which helped make Forum Browser better than it would have been without it.

TODO:
 Short Term:
  Make small dialog skin
  ParserBrowser: More parsing of profile links and allow user to view in webviewer
  Back on video also goes back a window - see what I can do (and see if other controls are affected)
  Finish no window stacking mode
  Implement get_participated_forum
  Post/thread/forum bookmarks
  
 Long Term:
  Check on optional import behavior
  Check for new parser rules automatically or add option to check for new rules
  Image zoom/rotate etc
  Look at using the AlarmClock builtin for the service - Easier to restart and less overall memory usage perhaps?
  When adding a forum, ask for logo background color (or image?) or ask later
  Option to save posts when exiting and not posting
  Use new option menus for context?
  Adjustable text size
  Logo url from field in forum config data?
  Add missing smilies other forum types
  Add missing quote formats for other forum systems
  Tapatalk: Use charset from get_config
  Find forum mobiquo.php path from tapatalk.js path in html page
  Latest Threads
  Today's New Posts?
  Make a million dollars
  
 Investigated And Possibly Unfixable:
  Skip forward on remote causes XBMC dialog
 
 Awaiting Future Developments:
  Show more extra info in tapatalk (e.g. followers) - TTv4

KNOWN ISSUES:
  Corrupted color display on longer posts. XBMC bug as of Frodo 12.1 (Fixed in Gotham 13)
  
Current Version : 2.1.9

*** 2.1.9 ***

Fixed colors for forum info to be viewable on dark skins
Fixed a bug causing ParserBrowser forums to fail
Fixed a bug preventing the viewing of images for links that are images
Added handling for access errors (windows specific and generic permission) with the file locking used for signaling
Added the ability to remove bookmarks

*** 2.1.8 ***

Added Bookmarks dialog