@@ -1,0 +1,93 @@
+<window>
+	<defaultcontrol always="true">111</defaultcontrol>
+	<zorder>2</zorder>
+	<type>dialog</type>
+	<coordinates>
+		<system>1</system>
+		<posx>475</posx>
+		<posy>200</posy>
+		<origin x="40" y="200">Player.Playing + Player.HasVideo + !StringCompare(Window(10000).Property(ForumBrowser_hidePNP),1)</origin>
+	</coordinates>
+	<controls>
+		<control type="image">
+			<posx>-20</posx>
+			<posy>-20</posy>
+			<width>350</width>
+			<height>360</height>
+			<texture border="30">forum-browser-white-box.png</texture>
+			<colordiffuse>AA000000</colordiffuse>
+		</control>
+		<control type="image" id="115">
+			<posx>0</posx>
+			<posy>0</posy>
+			<width>10</width>
+			<height>10</height>
+			<visible>Player.Playing + Player.HasVideo + !StringCompare(Window(10000).Property(ForumBrowser_hidePNP),1)</visible>
+		</control>
+		<control type="image">
+			<posx>0</posx>
+			<posy>0</posy>
+			<width>310</width>
+			<height>320</height>
+			<texture border="30">forum-browser-black-box.png</texture>
+		</control>
+		<control type="image">
+			<posx>10</posx>
+			<posy>10</posy>
+			<width>290</width>
+			<height>42</height>
+			<texture border="20">forum-browser-black-box.png</texture>
+		</control>
+		<control type="label">
+			<posx>10</posx>
+			<posy>16</posy>
+			<width>270</width>
+			<height>30</height>
+			<font>ForumBrowser-font13</font>
+			<aligny>center</aligny>
+			<textcolor>white</textcolor>
+			<align>center</align>
+			<label>[B]$INFO[Window.Property(caption)][/B]</label>
+		</control>
+		<control type='list' id="111">
+			<posx>10</posx>
+			<posy>60</posy>
+			<width>290</width>
+			<height>240</height>
+			<scrolltime>200</scrolltime>
+			<itemlayout height="38">
+				<control type="label">
+					<posx>20</posx>
+					<posy>4</posy>
+					<width>260</width>
+					<height>30</height>
+					<font>ForumBrowser-font13</font>
+					<aligny>center</aligny>
+					<textcolor>white</textcolor>
+					<align>left</align>
+					<info>ListItem.Label</info>
+				</control>
+			</itemlayout>
+			<focusedlayout height="38">
+				<control type="image">
+					<posx>0</posx>
+					<posy>-1</posy>
+					<width>290</width>
+					<height>40</height>
+					<texture border="20">forum-browser-grey-boxr.png</texture>
+				</control>
+				<control type="label">
+					<posx>20</posx>
+					<posy>4</posy>
+					<width>260</width>
+					<height>30</height>
+					<font>ForumBrowser-font13</font>
+					<aligny>center</aligny>
+					<textcolor>white</textcolor>
+					<align>left</align>
+					<info>ListItem.Label</info>
+				</control>
+			</focusedlayout>
+		</control>
+	</controls>
+</window>
