@@ -1,0 +1,117 @@
+<window>
+	<defaultcontrol always="true">119</defaultcontrol>
+	<zorder>1</zorder>
+	<type>dialog</type>
+	<coordinates>
+		<system>1</system>
+		<posx>495</posx>
+		<posy>200</posy>
+		<origin x="20" y="200">Player.Playing + Player.HasVideo + !StringCompare(Window(10000).Property(ForumBrowser_hidePNP),1)</origin>
+	</coordinates>
+	<controls>
+		<control type="label" id="115">
+			<posx>-40</posx>
+			<posy>-220</posy>
+			<width>10</width>
+			<height>10</height>
+			<visible>Player.Playing + Player.HasVideo + !StringCompare(Window(10000).Property(ForumBrowser_hidePNP),1)</visible>
+		</control>
+		<control type="image">
+			<posx>-5</posx>
+			<posy>-5</posy>
+			<width>300</width>
+			<height>330</height>
+			<texture border="10">forum-browser-video-box-white.png</texture>
+			<colordiffuse>44000000</colordiffuse>
+		</control>
+		<control type="image">
+			<posx>0</posx>
+			<posy>0</posy>
+			<width>290</width>
+			<height>320</height>
+			<texture border="10">forum-browser-video-box.png</texture>
+			<colordiffuse>FF4488AA</colordiffuse>
+		</control>
+		<control type="image">
+			<posx>10</posx>
+			<posy>10</posy>
+			<width>270</width>
+			<height>300</height>
+			<texture border="10">forum-browser-video-box-light.png</texture>
+		</control>
+		
+		<control type="group" id="119">
+			<control type='list' id="111">
+				<posx>10</posx>
+				<posy>50</posy>
+				<width>270</width>
+				<height>250</height>
+				<scrolltime>200</scrolltime>
+				<itemlayout height="38">
+					<control type="label">
+						<posx>20</posx>
+						<posy>12</posy>
+						<width>240</width>
+						<height>30</height>
+						<font>ForumBrowser-font13</font>
+						<aligny>center</aligny>
+						<textcolor>white</textcolor>
+						<align>left</align>
+						<info>ListItem.Label</info>
+					</control>
+				</itemlayout>
+				<focusedlayout height="38">
+					<control type="group">
+						<control type="image">
+							<posx>2</posx>
+							<posy>-4</posy>
+							<width>266</width>
+							<height>62</height>
+							<texture>forum-browser-video-select-back.png</texture>
+							<colordiffuse>FF4488AA</colordiffuse>
+						</control>
+						<control type="image">
+							<posx>0</posx>
+							<posy>8</posy>
+							<width>270</width>
+							<height>38</height>
+							<texture border="10">forum-browser-video-select.png</texture>
+						</control>
+					</control>
+					<control type="label">
+						<posx>20</posx>
+						<posy>12</posy>
+						<width>240</width>
+						<height>30</height>
+						<font>ForumBrowser-font13</font>
+						<aligny>center</aligny>
+						<textcolor>white</textcolor>
+						<align>left</align>
+						<info>ListItem.Label</info>
+					</control>
+				</focusedlayout>
+			</control>
+		</control>
+		
+		<control type="image">
+			<posx>10</posx>
+			<posy>10</posy>
+			<width>270</width>
+			<height>42</height>
+			<texture border="10">forum-browser-video-box-header.png</texture>
+		</control>
+		
+		<control type="label">
+			<posx>20</posx>
+			<posy>16</posy>
+			<width>250</width>
+			<height>30</height>
+			<font>ForumBrowser-font13</font>
+			<aligny>center</aligny>
+			<textcolor>white</textcolor>
+			<align>center</align>
+			<label>[B]$INFO[Window.Property(caption)][/B]</label>
+		</control>
+		
+	</controls>
+</window>
