@@ -4,7 +4,8 @@ Special thanks to John Hanselman for all his testing which helped make Forum Bro
 
 TODO:
  Short Term:
-  Make small dialog skin
+  Strings for bookmarks
+  Better bookmarks dialog for light/dark skin
   ParserBrowser: More parsing of profile links and allow user to view in webviewer
   Back on video also goes back a window - see what I can do (and see if other controls are affected)
   Finish no window stacking mode
@@ -42,7 +43,7 @@ Current Version : 2.1.9
 
 *** 2.1.9 ***
 
-Fixed colors for forum info to be viewable on dark skins
+Fixed colors for forum/user info to be viewable on dark skins
 Fixed a bug causing ParserBrowser forums to fail
 Fixed a bug preventing the viewing of images for links that are images
 Added handling for access errors (windows specific and generic permission) with the file locking used for signaling
